--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.6",
+        "botstrap": "^0.20.1",
+        "sass": "^1.89.0"
     }
 }
